@@ -20,6 +20,7 @@ is(
             call pass => T();
         };
         event Warning => sub {
+            call causes_fail => T();
             call warning => match qr/^Unexpected warning: Oh noes!/;
         };
         event Ok => sub {
