@@ -6,6 +6,10 @@
 - Make the plugin add a prefix to the warning message rather than adding it in
   the event class's summary method.
 
+- Make causes_fail an attribute in the event. It defaults to to true, but can
+  be set to false if you'd like to repurpose the event object for something
+  else.
+
 
 0.01     2016-05-22
 
